docs: add docs for assign product
